fix(input): updated element contrast for a11y
affects: @rei/cdr-input

--- a/src/components/input/styles/CdrInput.pcss
+++ b/src/components/input/styles/CdrInput.pcss
@@ -168,7 +168,7 @@
   }
 
   &__required-label {
-    color: $coal-train;
+    color: $taken-for-granite;
   }
 
   &__info-container {
@@ -180,7 +180,7 @@
   &__helper-text {
     @include redwood-display-20;
 
-    color: $coal-train;
+    color: $taken-for-granite;
     padding-left: $space-half-x;
     padding-top: $space-quarter-x;
   }
